# pekalib

./: .gitignore  CMakeLists.txt  jenbuild.sh
doc/: Doxyfile  design.txt  general_roadmap.txt
include/: CreateVertexType.hpp  Search.hpp  pekalib.hpp
src/: CMakeLists.txt  pekalib.cpp
tests/: CMakeLists.txt  utest.cpp
